@@ -1,5 +1,11 @@
 2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
+	* src/SDCCsymt.c,
+	  support/regression/tests/structreturn.c:
+	  Enable struct / union return for hc08, s08, mos6502.
+
+2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
+
 	* src/pdk/gen.c,
 	  src/z80/gen.c,
 	  src/SDCCsymt.c,
